--- a/apps/learning/Dockerfile
+++ b/apps/learning/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:22-alpine as development
+FROM node:22-alpine AS development
+
 WORKDIR /usr/src/server
 
 ARG LEARNING_SERVICE_PORT
@@ -20,11 +21,14 @@ EXPOSE ${LEARNING_SERVICE_PORT}
 # command at this stage will come from docker-compose
 
 
-FROM base as production
+FROM development AS production
 
-COPY --from=base /usr/src/server/node_modules ./node_modules
-COPY --from=base /usr/src/server/package*.json ./
-COPY --from=base /usr/src/server/dist ./dist
+WORKDIR /usr/src/server
+
+COPY --from=development /usr/src/server/node_modules ./node_modules
+COPY --from=development /usr/src/server/package*.json ./
+COPY apps/ ./apps
+COPY dist ./dist
 
 RUN npm run build
 
