--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
+
   gateway:
     container_name: gateway
     build:
-      target: ${NODE_ENV}
+      # target: ${NODE_ENV}
       context: .
       dockerfile: apps/gateway/Dockerfile
       args:
@@ -16,8 +17,8 @@ services:
     ports:
       - "${GATEWAY_PORT}:${GATEWAY_PORT}"
     entrypoint: sh -c "npx prisma migrate dev && npx nest start gateway --watch"
-    networks:
-      - local
+    # networks:
+    #   - local
     depends_on:
       database:
         condition: service_healthy
@@ -29,7 +30,7 @@ services:
     env_file:
       - ${ENV_FILE}
     build:
-      target: ${NODE_ENV}
+      # target: ${NODE_ENV}
       context: .
       dockerfile: apps/users/Dockerfile
       args:
@@ -41,8 +42,8 @@ services:
     volumes:
       - .:/usr/src/server
     command: npx nest start users --watch
-    networks:
-      - local
+    # networks:
+    #   - local
     depends_on:
       database:
         condition: service_healthy
@@ -54,7 +55,7 @@ services:
     env_file:
       - ${ENV_FILE}
     build:
-      target: ${NODE_ENV}
+      # target: ${NODE_ENV}
       context: .
       dockerfile: apps/learning/Dockerfile
       args:
@@ -66,13 +67,14 @@ services:
     volumes:
       - .:/usr/src/server
     command: npx nest start learning --watch
-    networks:
-      - local
+    # networks:
+    #   - local
     depends_on:
       database:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+
   database:
     container_name: database
     restart: always
@@ -86,8 +88,9 @@ services:
       retries: 5
     ports:
       - "${DATABASE_PORT}:${DATABASE_PORT}"
-    networks:
-      - local
+    # networks:
+    #   - local
+
   rabbitmq:
     container_name: rabbitmq
     image: rabbitmq:4.0.1-management
@@ -103,16 +106,16 @@ services:
       - "${RABBITMQ_MC_PORT}:${RABBITMQ_MC_PORT}"
     volumes:
       - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-    networks:
-      - local
+    # networks:
+    #   - local
     depends_on:
       database:
         condition: service_healthy
 
-volumes:
-  database:
-    driver: local
+# volumes:
+#   database:
+#     driver: local
 
-networks:
-  local:
-    driver: bridge
+# networks:
+#   local:
+#     driver: bridge
