--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
     depends_on:
       database:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   users:
     container_name: users
     env_file:
@@ -43,6 +46,9 @@ services:
     depends_on:
       database:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   learning:
     container_name: learning
     env_file:
@@ -64,6 +70,8 @@ services:
       - local
     depends_on:
       database:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
   
   curriculum:
@@ -88,6 +96,8 @@ services:
     depends_on:
       database:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   database:
     container_name: database
@@ -104,6 +114,27 @@ services:
       - "${DATABASE_PORT}:${DATABASE_PORT}"
     networks:
       - local
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:4.0.1-management
+    env_file:
+      - ${ENV_FILE}
+    healthcheck:
+      test: "rabbitmq-diagnostics -q ping"
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "${RABBITMQ_PORT}:${RABBITMQ_PORT}"
+      - "${RABBITMQ_MC_PORT}:${RABBITMQ_MC_PORT}"
+    volumes:
+      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+    networks:
+      - local
+    depends_on:
+      database:
+        condition: service_healthy
+
 volumes:
   database:
     driver: local
