feat: improve cors for receiving data from fronend

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ APP_DOMAIN= # sth like novaenglish.by
 DEFAULT_API_VERSION=1
 
 # Service ports
+FRONTEND_URL=http://localhost:8000
+
 GATEWAY_HOST=gateway
 GATEWAY_PORT=3000
 
