--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,7 +5,7 @@
 images:
   repository: registry.novaenglish.by
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  # tag: "latest"
 
 serviceAccounts:
   # Specifies whether service accounts should be created.
@@ -20,7 +20,7 @@ postgres:
     tag: 16.3-alpine
   replicas: 1
   service:
-    name: postgres
+    name: database
     port: 5432
     targetPort: 5432
   resources:
@@ -42,13 +42,13 @@ gateway:
     name: gateway
     port: 3000
     targetPort: 3000
-  resources:
-    requests:
-      cpu: 500m
-      memory: 800Mi
-    limits:
-      cpu: 900m
-      memory: 1200Mi
+  resources: {}
+  #   requests:
+  #     cpu: 500m
+  #     memory: 800Mi
+  #   limits:
+  #     cpu: 900m
+  #     memory: 1200Mi
 
 rabbitmq:
   create: true
@@ -62,7 +62,7 @@ rabbitmq:
       - name: port
         port: 5672
         targetPort: 5672
-      - name: mc_port
+      - name: mc-port
         port: 15672
         targetPort: 15672
   resources:
@@ -72,6 +72,44 @@ rabbitmq:
     limits:
       cpu: 300m
       memory: 300Mi
+
+users:
+  create: true
+  name: users
+  image:
+    name: nova-platform-api-users
+    tag: latest
+  replicas: 1
+  service:
+    name: users
+    port: 3001
+    targetPort: 3001
+  resources:
+    requests:
+      cpu: 200m
+      memory: 400Mi
+    limits:
+      cpu: 300m
+      memory: 600Mi
+
+learning:
+  create: true
+  name: learning
+  image:
+    name: nova-platform-api-learning
+    tag: latest
+  replicas: 1
+  service:
+    name: learning
+    port: 3002
+    targetPort: 3002
+  resources:
+    requests:
+      cpu: 200m
+      memory: 400Mi
+    limits:
+      cpu: 300m
+      memory: 600Mi
 
 env:
 - name: "HOST"
@@ -114,151 +152,3 @@ env:
   value: "rabbitmq"
 - name: RABBITMQ_URL
   value: amqp://rabbitmq:5672
-
-# replicaCount: 1
-
-# image_node:
-#   repository: node
-#   pullPolicy: IfNotPresent
-#   # Overrides the image tag whose default is the chart appVersion.
-#   tag: "20-alpine"
-
-# imagePullSecrets: []
-# nameOverride: ""
-# fullnameOverride: ""
-
-# serviceAccount:
-#   # Specifies whether a service account should be created
-#   create: true
-#   # Automatically mount a ServiceAccount's API credentials?
-#   automount: true
-#   # Annotations to add to the service account
-#   annotations: {}
-#   # The name of the service account to use.
-#   # If not set and create is true, a name is generated using the fullname template
-#   name: ""
-
-# podAnnotations: {}
-# podLabels: {}
-
-# podSecurityContext: {}
-# # fsGroup: 2000
-
-# securityContext: {}
-# # capabilities:
-# #   drop:
-# #   - ALL
-# # readOnlyRootFilesystem: true
-# # runAsNonRoot: true
-# # runAsUser: 1000
-
-# service:
-#   type: ClusterIP
-#   port: 80
-
-# ingress:
-#   enabled: false
-#   className: ""
-#   annotations: {}
-#   # kubernetes.io/ingress.class: nginx
-#   # kubernetes.io/tls-acme: "true"
-#   hosts:
-#   - host: chart-example.local
-#     paths:
-#     - path: /
-#       pathType: ImplementationSpecific
-#   tls: []
-#   #  - secretName: chart-example-tls
-#   #    hosts:
-#   #      - chart-example.local
-
-# resources: {}
-# # We usually recommend not to specify default resources and to leave this as a conscious
-# # choice for the user. This also increases chances charts run on environments with little
-# # resources, such as Minikube. If you do want to specify resources, uncomment the following
-# # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-# # limits:
-# #   cpu: 100m
-# #   memory: 128Mi
-# # requests:
-# #   cpu: 100m
-# #   memory: 128Mi
-
-# # livenessProbe:
-# #   httpGet:
-# #     path: /
-# #     port: http
-# # readinessProbe:
-# #   httpGet:
-# #     path: /
-# #     port: http
-
-# autoscaling:
-#   enabled: false
-#   minReplicas: 1
-#   maxReplicas: 100
-#   targetCPUUtilizationPercentage: 80
-#   # targetMemoryUtilizationPercentage: 80
-
-# # Additional volumes on the output Deployment definition.
-# # volumes: []
-# volumes:
-# - name: nova-api
-# # - name: foo
-# #   secret:
-# #     secretName: mysecret
-# #     optional: false
-
-# # Additional volumeMounts on the output Deployment definition.
-# # volumeMounts: []
-# volumeMounts:
-# - name: nova-api
-#   mountPath: "/usr/src/server"
-# # - name: foo
-# #   mountPath: "/etc/foo"
-# #   readOnly: true
-# workingDir: "/usr/src/server"
-
-# nodeSelector: {}
-
-# tolerations: []
-
-# affinity: {}
-
-
-# env:
-# # - name: "DATABASE_URL"
-# #   value: "postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-# - name: "POSTGRES_PASSWORD"
-#   value: "randompassword"
-# - name: "POSTGRES_USER"
-#   value: "postgres"
-# - name: "DATABASE_PORT"
-#   value: "5432"
-# - name: "POSTGRES_DB"
-#   value: "nova-platform-main-db-dev"
-# - name: "APP_ENV"
-#   value: "dev"
-# - name: "NODE_ENV"
-#   value: "development"
-# - name: "FRONTEND_URL"
-#   value: "http://nova-front.nova-dev.svc.cluster.local/"
-# # - name: "GOOGLE_CALLBACK_URL"
-# #   value: "https://qa1.nova.local/api/v1/auth/google/callback"
-# - name: "GATEWAY_PORT"
-#   value: "80"
-# - name: "USER_SERVICE_PORT"
-#   value: "80"
-# - name: "ENV_FILE"
-#   value: ".env.development.local"
-
-
-
-
-
-
-
-# #########
-# application_environment: dev
-# domain_name: nova.local
-# build_hash: empty
