--- a/helm/templates/nova-api-gateway.yaml
+++ b/helm/templates/nova-api-gateway.yaml
@@ -76,5 +76,5 @@ spec:
           value: "{{ .value }}"
         {{- end }}
         resources:
-          {{- toYaml .Values.gateway.resources | nindent 10 }}
+        #   {{- toYaml .Values.gateway.resources | nindent 10 }}
 {{- end }}
