--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -23,13 +23,13 @@ postgres:
     name: database
     port: 5432
     targetPort: 5432
-  resources:
-    requests:
-      cpu: 200m
-      memory: 180Mi
-    limits:
-      cpu: 300m
-      memory: 300Mi
+  resources: {}
+    # requests:
+    #   cpu: 200m
+    #   memory: 180Mi
+    # limits:
+    #   cpu: 300m
+    #   memory: 300Mi
 
 gateway:
   create: true
@@ -65,13 +65,13 @@ rabbitmq:
       - name: mc-port
         port: 15672
         targetPort: 15672
-  resources:
-    requests:
-      cpu: 200m
-      memory: 180Mi
-    limits:
-      cpu: 300m
-      memory: 300Mi
+  resources: {}
+    # requests:
+    #   cpu: 200m
+    #   memory: 180Mi
+    # limits:
+    #   cpu: 300m
+    #   memory: 300Mi
 
 users:
   create: true
@@ -84,13 +84,13 @@ users:
     name: users
     port: 3001
     targetPort: 3001
-  resources:
-    requests:
-      cpu: 200m
-      memory: 400Mi
-    limits:
-      cpu: 300m
-      memory: 600Mi
+  resources: {}
+    # requests:
+    #   cpu: 200m
+    #   memory: 400Mi
+    # limits:
+    #   cpu: 300m
+    #   memory: 600Mi
 
 learning:
   create: true
@@ -103,13 +103,13 @@ learning:
     name: learning
     port: 3002
     targetPort: 3002
-  resources:
-    requests:
-      cpu: 200m
-      memory: 400Mi
-    limits:
-      cpu: 300m
-      memory: 600Mi
+  resources: {}
+    # requests:
+    #   cpu: 200m
+    #   memory: 400Mi
+    # limits:
+    #   cpu: 300m
+    #   memory: 600Mi
 
 env:
 - name: "HOST"
