--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,38 +1,34 @@
-name: Build Docker Image
+name: Build Images
 
-on: workflow_dispatch
+on:
+  # manual run
+  workflow_dispatch:
+
+  # push:
+  #   branches: [main]
+
+  # pull_request:
+  #   branches: [main]
 
 jobs:
-  build_docker:
-    strategy:
-      matrix:
-        service: ['gateway', 'users']
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      # - name: Login to the Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: registry.novaenglish.by
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
-          node-version: '22'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the project
-        run: npm run build ${{ matrix.service }}
-
-      - name: Extract branch name
-        id: get_branch
-        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/} | tr '/' '-')" >> $GITHUB_ENV
-
-      - name: Build Docker Image
-        run: |
-          docker build --no-cache --build-arg SERVICE_NAME=${{ matrix.service }} -t ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${GITHUB_SHA::7} .
-
-      - name: Push Docker images
-        run: |
-          echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL }} --username ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-          docker push ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${GITHUB_SHA::7}
+          context: .
+          push: false
+          file: apps/gateway/Dockerfile
+          tags: registry.novaenglish.by/nova-platform-api-gateway:latest
