--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,17 +18,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to the Registry
-        uses: docker/login-action@v3
-        with:
-          registry: registry.novaenglish.by
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+      # - name: Login to the Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: registry.novaenglish.by
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_PASSWORD }}
       
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: false
           file: apps/gateway/Dockerfile
           tags: registry.novaenglish.by/nova-platform-api-gateway:latest
