--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,10 +33,15 @@ jobs:
       #     username: ${{ vars.REGISTRY_USERNAME }}
       #     password: ${{ secrets.REGISTRY_PASSWORD }}
 
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
       - name: Build and push 
         uses: docker/build-push-action@v6
         with:
           context: .
           push: false
           file: apps/${{ matrix.service }}/Dockerfile
-          tags: registry.novaenglish.by/nova-platform-api-${{ matrix.service }}:latest
+          tags: registry.novaenglish.by/nova-platform-api-${{ matrix.service }}:${{ steps.extract_branch.outputs.branch }}
