--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,12 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 JWT_SECRET=
+
+# Brev mailing service
+TRANSACTIONAL_EMAIL_API_URL=
+TRANSACTIONAL_EMAIL_API_KEY=
+TRANSACTIONAL_EMAIL_FROM=
+
+# Notion (leads and some other entities)
+NOTION_API_KEY=
+NOTION_LEADS_DATABASE_ID=
