--- a/.github/workflows/build-and-deploy-to-qa3.yml
+++ b/.github/workflows/build-and-deploy-to-qa3.yml
@@ -10,19 +10,9 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v4
 
-      - name: 'Deploy'
-        uses: 'deliverybot/helm@v1'
+      - name: Deploy
+        uses: WyriHaximus/github-action-helm3@v4.0.1
         with:
-          release: 'nova-api'
-          track: canary
-          namespace: 'nova-qa3'
-          chart: 'helm'
-          # token: '${{ github.token }}'
-          # values: |
-          #   name: foobar
-          value-files: >-
-            [
-              "helm/values.yaml"
-            ]
-        env:
-          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+          exec: helm upgrade --install nova-api helm/ -n nova-qa3
+          kubeconfig: '${{ secrets.KUBECONFIG }}'
+          # overrule_existing_kubeconfig: "true"
