--- a/.github/workflows/build-and-deploy-to-qa3.yml
+++ b/.github/workflows/build-and-deploy-to-qa3.yml
@@ -1,18 +1,62 @@
-name: Deploy to nova-qa3
+name: Build and deploy to nova-qa3
 
 on: workflow_dispatch
 
+  # push:
+  #   branches: [main]
+
+  # pull_request:
+  #   branches: [main]
+
+env:
+  REGISTRY: registry.novaenglish.by
+  REGISTRY_USERNAME: novaenglishby
+
 jobs:
-  test-and-build:
+  build:
+
+    strategy:
+      matrix:
+        service: ['gateway', 'learning', 'users']
+
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
-      - name: Check out the repository
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to the Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Get short SHA
+        id: slug
+        run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
+
+      - name: Build and push 
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: apps/${{ matrix.service }}/Dockerfile
+          tags: ${{ env.REGISTRY }}/nova-platform-api-${{ matrix.service }}:${{ steps.slug.outputs.sha7 }}
 
       - name: Deploy
         uses: WyriHaximus/github-action-helm3@v4.0.1
         with:
-          exec: helm upgrade --install nova-api helm/ -n nova-qa3
+          exec: helm upgrade --install nova-api helm/ -n nova-qa3 \
+            --set images.tag=${{ steps.slug.outputs.sha7 }}
           kubeconfig: '${{ secrets.KUBECONFIG }}'
           # overrule_existing_kubeconfig: "true"
