--- a/.github/workflows/build-and-deploy-to-qa3.yml
+++ b/.github/workflows/build-and-deploy-to-qa3.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        service: ['gateway', 'learning', 'users']
+        service: ['gateway', 'learning', 'users', 'curriculum']
 
     runs-on: ubuntu-latest
 
